Fix bug in changing/creating AutoSAR models